--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 <footer
-  class="mx-auto mt-16 flex max-w-7xl items-center justify-between p-8 text-sm"
+  class="relative mx-auto mt-16 flex max-w-7xl flex-col items-center justify-center p-8 text-center text-sm before:absolute before:bottom-0 before:left-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-indigo-100 before:blur-3xl md:flex-row md:justify-between md:text-left"
 >
-  <p>
+  <p class="mb-4 md:mb-0">
     &copy; {new Date().getFullYear()} Regio Lions. Alle Rechte vorbehalten. Design
     & Entwicklung <a
       href="https://andreasremdt.com"
@@ -10,7 +10,7 @@
     >.
   </p>
 
-  <nav class="space-x-8">
+  <nav class="space-x-4 md:space-x-8">
     <a href="/impressum">Impressum</a>
     <a href="/datenschutz">Datenschutz</a>
   </nav>
