--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -10,7 +10,7 @@ import Layout from "@/layout/default.astro";
     Clubs.
   </Hero>
 
-  <div class="w-2/3">
+  <div class="md:w-2/3">
     <h2 class="h3 mb-2">
       Programmierung & inhaltlich Verantwortlicher gemäß § 6 MDStV
     </h2>
