--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -12,65 +12,69 @@ import Layout from "@/layout/default.astro";
     amet ut!
   </Hero>
 
-  <NewsPreview
-    title="Adventskalender 2023"
-    date={new Date()}
-    excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-    href="/news/test"
-    imageUrl="https://placehold.co/400x400"
-  />
+  <div
+    class="mb-16 grid grid-cols-1 gap-x-4 gap-y-16 sm:grid-cols-2 md:gap-x-8 lg:grid-cols-1"
+  >
+    <NewsPreview
+      title="Adventskalender 2023"
+      date={new Date()}
+      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
+      href="/news/test"
+      imageUrl="https://placehold.co/400x400"
+    />
 
-  <NewsPreview
-    title="Adventskalender 2023"
-    date={new Date()}
-    excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-    href="/news/test"
-    imageUrl="https://placehold.co/400x400"
-  />
+    <NewsPreview
+      title="Adventskalender 2023"
+      date={new Date()}
+      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
+      href="/news/test"
+      imageUrl="https://placehold.co/400x400"
+    />
 
-  <NewsPreview
-    title="Adventskalender 2023"
-    date={new Date()}
-    excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-    href="/news/test"
-    imageUrl="https://placehold.co/400x400"
-  />
+    <NewsPreview
+      title="Adventskalender 2023"
+      date={new Date()}
+      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
+      href="/news/test"
+      imageUrl="https://placehold.co/400x400"
+    />
 
-  <NewsPreview
-    title="Adventskalender 2023"
-    date={new Date()}
-    excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-    href="/news/test"
-    imageUrl="https://placehold.co/400x400"
-  />
+    <NewsPreview
+      title="Adventskalender 2023"
+      date={new Date()}
+      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
+      href="/news/test"
+      imageUrl="https://placehold.co/400x400"
+    />
 
-  <NewsPreview
-    title="Adventskalender 2023"
-    date={new Date()}
-    excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-    href="/news/test"
-    imageUrl="https://placehold.co/400x400"
-  />
+    <NewsPreview
+      title="Adventskalender 2023"
+      date={new Date()}
+      excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
+      href="/news/test"
+      imageUrl="https://placehold.co/400x400"
+    />
+  </div>
 
   <nav class="flex justify-center gap-x-1">
     <a
       href="/news"
-      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      class="inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
       >1</a
     >
     <a
       href="/news"
-      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      class="inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
       >2</a
     >
     <a
       href="/news"
-      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      class="inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
       >3</a
     >
     <a
       href="/news"
-      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      class="inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
       >4</a
     >
   </nav>
