--- a/src/pages/news/[...slug].astro
+++ b/src/pages/news/[...slug].astro
@@ -19,8 +19,8 @@ export function getStaticPaths() {
     Nachbarländern / Förderung durch die Oberrheinkonferenz
   </Hero>
 
-  <div class="mx-auto w-2/3">
-    <figure class="-mx-52 mb-12">
+  <div class="mx-auto md:w-2/3">
+    <figure class="mb-12 md:-mx-24 xl:-mx-52">
       <img
         src="https://placehold.co/1000x600"
         alt="placeholder image for later purposes"
@@ -63,7 +63,7 @@ export function getStaticPaths() {
       Leo-Club Weil am Rhein gebucht worden.
     </p>
 
-    <figure class="-mx-32 my-12">
+    <figure class="my-6 md:-mx-24 md:my-12 lg:-mx-32">
       <img
         src="https://placehold.co/500x300"
         alt="placeholder image for later purposes"
@@ -108,7 +108,9 @@ export function getStaticPaths() {
       Oberrheinkonferenz.
     </p>
 
-    <figure class="mt-12 grid grid-cols-3 gap-8">
+    <figure
+      class="mt-6 grid grid-cols-2 gap-4 md:mt-12 md:grid-cols-3 md:gap-8"
+    >
       <img
         src="https://placehold.co/500x400"
         alt="placeholder image for later purposes"
