--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,5 +8,5 @@ const { title } = Astro.props;
 
 <header class="py-8">
   <h1 class="h1 mb-8">{title}</h1>
-  <p class="mb-12 w-1/2 text-xl"><slot /></p>
+  <p class="mb-6 text-lg md:mb-12 md:w-2/3 md:text-xl lg:w-1/2"><slot /></p>
 </header>
