--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -1,4 +1,6 @@
 ---
+import { formatDate } from "@/lib/utils";
+
 interface Props {
   title: string;
   href: string;
@@ -10,22 +12,24 @@ interface Props {
 const { title, date, imageUrl, excerpt, href } = Astro.props;
 ---
 
-<article class="mb-16 flex gap-x-12">
+<article class="flex flex-col gap-6 lg:flex-row lg:gap-12">
   <img
     src={imageUrl}
     alt="placeholder image for later purposes"
     width="250"
     height="250"
-    class="rounded-xl shadow-lg"
+    class="h-64 w-full rounded-xl object-cover shadow-lg lg:h-auto lg:w-auto lg:max-w-64"
   />
   <div class="flex flex-col justify-center">
-    <time datetime="">{date}</time>
+    <time datetime={date.toISOString()} class="text-sm text-gray-500"
+      >{formatDate(date)}</time
+    >
     <h2 class="h4 mb-6 mt-1">
       <a href={href}>{title}</a>
     </h2>
     <p>
       {excerpt}
     </p>
-    <a href={href} class="btn-btn-secondary mt-6"> Weiterlesen &rarr; </a>
+    <a href={href} class="btn btn-secondary mt-6 w-max"> Weiterlesen &rarr; </a>
   </div>
 </article>
