--- a/src/layout/default.astro
+++ b/src/layout/default.astro
@@ -13,7 +13,7 @@ import "@/styles/base.css";
   <body class="leading-relaxed text-gray-600">
     <Header />
 
-    <main class="mx-auto max-w-7xl px-8">
+    <main class="mx-auto max-w-7xl px-4 md:px-8">
       <slot />
     </main>
 
