--- a/src/pages/clubs.astro
+++ b/src/pages/clubs.astro
@@ -13,7 +13,7 @@ import Layout from "@/layout/default.astro";
   </Hero>
 
   <h2 class="h2 mb-8 font-black">Schweiz</h2>
-  <div class="grid grid-cols-4 gap-8">
+  <div class="grid grid-cols-2 gap-4 md:grid-cols-3 md:gap-8 lg:grid-cols-4">
     <Card
       title="Lions Club Basel"
       href="https://example.org"
@@ -47,7 +47,7 @@ import Layout from "@/layout/default.astro";
   </div>
 
   <h2 class="h2 mb-8 mt-16 font-black">Frankreich</h2>
-  <div class="grid grid-cols-4 gap-8">
+  <div class="grid grid-cols-2 gap-4 md:grid-cols-3 md:gap-8 lg:grid-cols-4">
     <Card
       title="Lions Club Altkirch Sundgau"
       href="https://example.org"
@@ -66,7 +66,7 @@ import Layout from "@/layout/default.astro";
   </div>
 
   <h2 class="h2 mb-8 mt-16 font-black">Deutschland</h2>
-  <div class="grid grid-cols-4 gap-8">
+  <div class="grid grid-cols-2 gap-4 md:grid-cols-3 md:gap-8 lg:grid-cols-4">
     <Card
       title="Lions Club Bad Säckingen"
       href="https://example.org"
