--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -6,7 +6,7 @@ import Layout from "@/layout/default.astro";
 <Layout>
   <Hero title="Datenschutzerklärung" />
 
-  <div class="w-2/3">
+  <div class="md:w-2/3">
     <p>
       Diese Datenschutzerklärung klärt Sie über die Art, den Umfang und Zweck
       der Verarbeitung von personenbezogenen Daten (nachfolgend kurz „Daten“)
