--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -11,10 +11,10 @@ import Layout from "@/layout/default.astro";
     amet ut!
   </Hero>
 
-  <div class="flex gap-x-12">
-    <form action="" method="post" class="w-2/3">
-      <div class="mb-8 flex gap-8">
-        <div class="w-1/2">
+  <div class="flex flex-col gap-x-12 lg:flex-row">
+    <form action="" method="post" class="lg:w-2/3">
+      <div class="mb-4 flex flex-col gap-4 sm:flex-row md:mb-8 md:gap-8">
+        <div class="sm:w-1/2">
           <label for="firstname" class="label">Vorname</label>
           <input
             type="text"
@@ -25,7 +25,7 @@ import Layout from "@/layout/default.astro";
           />
         </div>
 
-        <div class="w-1/2">
+        <div class="sm:w-1/2">
           <label for="lastname" class="label">Nachname</label>
           <input
             type="text"
@@ -37,8 +37,8 @@ import Layout from "@/layout/default.astro";
         </div>
       </div>
 
-      <div class="mb-8 flex gap-x-8">
-        <div class="w-1/2">
+      <div class="mb-4 flex flex-col gap-4 sm:flex-row md:mb-8 md:gap-8">
+        <div class="sm:w-1/2">
           <label for="email" class="label">E-Mail</label>
           <input
             type="email"
@@ -48,7 +48,7 @@ import Layout from "@/layout/default.astro";
             class="textbox"
           />
         </div>
-        <div class="w-1/2">
+        <div class="sm:w-1/2">
           <label for="phone" class="label flex items-center"
             >Telefonnummer <span
               class="ml-auto text-xs font-normal uppercase text-gray-500"
@@ -64,12 +64,12 @@ import Layout from "@/layout/default.astro";
         name="message"
         id="message"
         required
-        class="textbox mb-8 h-32 resize-y px-4 py-2"></textarea>
+        class="textbox mb-4 h-32 resize-y px-4 py-2 md:mb-8"></textarea>
 
       <button type="submit" class="btn btn-primary">Nachricht senden</button>
     </form>
 
-    <div role="alert" class="mt-7 w-1/3">
+    <div role="alert" class="mt-7 lg:w-1/3">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         aria-hidden="true"
@@ -77,7 +77,7 @@ import Layout from "@/layout/default.astro";
         viewBox="0 0 24 24"
         stroke-width="1.5"
         stroke="currentColor"
-        class="mb-4 h-8 w-8 text-green-600"
+        class="mb-2 h-8 w-8 text-green-600 lg:mb-4"
       >
         <path
           stroke-linecap="round"
@@ -85,7 +85,7 @@ import Layout from "@/layout/default.astro";
           d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
         ></path>
       </svg>
-      <h2 class="h3 mb-4">Vielen Dank für Ihre Nachricht!</h2>
+      <h2 class="h3 mb-2 lg:mb-4">Vielen Dank für Ihre Nachricht!</h2>
       <p>
         Ihre Nachricht wurde erfolgreich an uns gesendet. Wir werden uns
         demnächst bei Ihnen melden.
