feat: add images for clubs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,10 @@
 ---
 import Card from "@/components/card.astro";
 import Layout from "@/layout/default.astro";
+
+import lionsClubBasel from "@/images/lions-club-basel.jpg";
+import lionsClubBaselSpalen from "@/images/lions-club-basel-spalen.jpg";
+import lionsClubBaselStAlban from "@/images/lions-club-basel-st-alban.jpg";
 ---
 
 <Layout>
@@ -175,19 +179,19 @@ import Layout from "@/layout/default.astro";
         title="Adventskalender 2023"
         date={new Date()}
         href="/news/test"
-        imageUrl="https://placehold.co/400x400"
+        image={lionsClubBasel}
       />
       <Card
         title="Freudiges Ziehen am selben Strang: trinationale Hausbootfahrt 2023"
         date={new Date()}
         href="/news/test"
-        imageUrl="https://placehold.co/400x400"
+        image={lionsClubBaselSpalen}
       />
       <Card
         title="Adventskalender 2023"
         date={new Date()}
         href="/news/test"
-        imageUrl="https://placehold.co/400x400"
+        image={lionsClubBaselStAlban}
       />
     </div>
 
