--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -1,27 +1,36 @@
 ---
+import { Image } from "astro:assets";
 import { formatDate } from "@/lib/utils";
+import { type ImageMetadata } from "astro";
 
 interface Props {
   title: string;
   href: string;
   date?: Date;
-  imageUrl?: string;
+  image?: ImageMetadata;
 }
 
-const { title, date, imageUrl, href } = Astro.props;
+const { title, date, image, href } = Astro.props;
 ---
 
 <article
-  class="relative shadow-lg after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/50"
+  class="group relative overflow-hidden rounded-xl shadow-lg after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/80"
 >
-  <img
-    src={imageUrl}
-    alt="placeholder image for later purposes"
-    width="400"
-    height="400"
-    class="max-h-72 w-full rounded-xl object-cover sm:max-h-none"
-  />
-  <div class="absolute inset-0 z-10 flex flex-col justify-end p-4 md:p-8">
+  {
+    image && (
+      <Image
+        src={image}
+        alt={`bild vom ${title}`}
+        width="400"
+        height="400"
+        class="aspect-square h-full max-h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110 sm:max-h-none"
+      />
+    )
+  }
+
+  <div
+    class="absolute inset-0 z-10 flex flex-col justify-end p-4 md:px-8 md:py-6"
+  >
     {
       date ? (
         <time datetime={date.toISOString()} class="mb-1 text-gray-200">
