--- a/src/pages/clubs.astro
+++ b/src/pages/clubs.astro
@@ -2,6 +2,23 @@
 import Card from "@/components/card.astro";
 import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
+
+import lionsClubBasel from "@/images/lions-club-basel.jpg";
+import lionsClubBaselSpalen from "@/images/lions-club-basel-spalen.jpg";
+import lionsClubBaselStAlban from "@/images/lions-club-basel-st-alban.jpg";
+import lionsClubDorneck from "@/images/lions-club-dorneck.jpg";
+import lionsClubSolothurnLeimental from "@/images/lions-club-solothurn-leimental.jpg";
+import leoClubBasel from "@/images/leo-club-basel.jpg";
+import lionsClubAltkirchSundgau from "@/images/lions-club-altkirch-sundgau.jpg";
+import lionsClubMulhouseEurope from "@/images/lions-club-mulhouse-europe.jpg";
+import lionsClubSaintLouis from "@/images/lions-club-saint-louis.jpg";
+import lionsClubBadSaeckingen from "@/images/lions-club-bad-saeckingen.jpg";
+import lionsClubHochschwarzwald from "@/images/lions-club-hochschwarzwald.jpg";
+import lionsClubLoerrach from "@/images/lions-club-loerrach.jpg";
+import lionsClubMuellheimNeuenburg from "@/images/lions-club-muellheim-neuenburg.jpg";
+import lionsClubSchliengenImMarkgraeflerland from "@/images/lions-club-schliengen-im-markgraeflerland.jpg";
+import lionsClubWeilAmRhein from "@/images/lions-club-weil-am-rhein.jpg.jpg";
+import leoClubWeilAmRhein from "@/images/leo-club-weil-am-rhein.jpg";
 ---
 
 <Layout>
@@ -17,32 +34,32 @@ import Layout from "@/layout/default.astro";
     <Card
       title="Lions Club Basel"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubBasel}
     />
     <Card
       title="Lions Club Basel-Spalen"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubBaselSpalen}
     />
     <Card
       title="Lions Club Basel St. Alban"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubBaselStAlban}
     />
     <Card
       title="Lions Club Dorneck"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubDorneck}
     />
     <Card
       title="Lions Club Solothurn Leimental"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubSolothurnLeimental}
     />
     <Card
       title="Leo Club Basel"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={leoClubBasel}
     />
   </div>
 
@@ -51,17 +68,17 @@ import Layout from "@/layout/default.astro";
     <Card
       title="Lions Club Altkirch Sundgau"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubAltkirchSundgau}
     />
     <Card
       title="Lions Club Mulhouse-Europe"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubMulhouseEurope}
     />
     <Card
       title="Lions Club Saint Louis"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubSaintLouis}
     />
   </div>
 
@@ -70,37 +87,37 @@ import Layout from "@/layout/default.astro";
     <Card
       title="Lions Club Bad Säckingen"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubBadSaeckingen}
     />
     <Card
       title="Lions Club Hochschwarzwald"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubHochschwarzwald}
     />
     <Card
       title="Lions Club Lörrach"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubLoerrach}
     />
     <Card
       title="Lions Club Müllheim-Neuenburg"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubMuellheimNeuenburg}
     />
     <Card
       title="Lions Club Schliengen im Markgräflerland"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubSchliengenImMarkgraeflerland}
     />
     <Card
       title="Lions Club Weil am Rhein"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={lionsClubWeilAmRhein}
     />
     <Card
       title="Leo Club Weil am Rhein"
       href="https://example.org"
-      imageUrl="https://placehold.co/400x400"
+      image={leoClubWeilAmRhein}
     />
   </div>
 </Layout>
