--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -2,6 +2,8 @@
 import Hero from "@/components/hero.astro";
 import NewsPreview from "@/components/news-preview.astro";
 import Layout from "@/layout/default.astro";
+
+import hausbootfahrt from "@/images/hausbootfahrt.jpeg";
 ---
 
 <Layout>
@@ -20,7 +22,7 @@ import Layout from "@/layout/default.astro";
       date={new Date()}
       excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
       href="/news/test"
-      imageUrl="https://placehold.co/400x400"
+      image={hausbootfahrt}
     />
 
     <NewsPreview
@@ -28,7 +30,7 @@ import Layout from "@/layout/default.astro";
       date={new Date()}
       excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
       href="/news/test"
-      imageUrl="https://placehold.co/400x400"
+      image={hausbootfahrt}
     />
 
     <NewsPreview
@@ -36,7 +38,7 @@ import Layout from "@/layout/default.astro";
       date={new Date()}
       excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
       href="/news/test"
-      imageUrl="https://placehold.co/400x400"
+      image={hausbootfahrt}
     />
 
     <NewsPreview
@@ -44,7 +46,7 @@ import Layout from "@/layout/default.astro";
       date={new Date()}
       excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
       href="/news/test"
-      imageUrl="https://placehold.co/400x400"
+      image={hausbootfahrt}
     />
 
     <NewsPreview
@@ -52,7 +54,7 @@ import Layout from "@/layout/default.astro";
       date={new Date()}
       excerpt="saLorem ipsum dolor sit amet, consectetur adipisicing elit.d Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit."
       href="/news/test"
-      imageUrl="https://placehold.co/400x400"
+      image={hausbootfahrt}
     />
   </div>
 
