--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -1,25 +1,31 @@
 ---
 import { formatDate } from "@/lib/utils";
+import { type ImageMetadata } from "astro";
+import { Image } from "astro:assets";
 
 interface Props {
   title: string;
   href: string;
   excerpt: string;
   date: Date;
-  imageUrl?: string;
+  image?: ImageMetadata;
 }
 
-const { title, date, imageUrl, excerpt, href } = Astro.props;
+const { title, date, image, excerpt, href } = Astro.props;
 ---
 
 <article class="flex flex-col gap-6 lg:flex-row lg:gap-12">
-  <img
-    src={imageUrl}
-    alt="placeholder image for later purposes"
-    width="250"
-    height="250"
-    class="h-64 w-full rounded-xl object-cover shadow-lg lg:h-auto lg:w-auto lg:max-w-64"
-  />
+  {
+    image && (
+      <Image
+        src={image}
+        alt="placeholder image for later purposes"
+        width="250"
+        height="250"
+        class="h-64 w-full rounded-xl object-cover shadow-lg lg:h-auto lg:w-auto lg:max-w-64"
+      />
+    )
+  }
   <div class="flex flex-col justify-center">
     <time datetime={date.toISOString()} class="text-sm text-gray-500"
       >{formatDate(date)}</time
