--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -20,7 +20,7 @@
   }
 
   .textbox {
-    @apply h-12 w-full rounded-md border border-gray-300 px-4 shadow-sm;
+    @apply h-12 w-full rounded-md border border-gray-300 px-4 shadow-sm aria-[invalid]:border-red-400 aria-[invalid]:shadow-red-100;
   }
 
   .h1 {
